--- a/payroll/guidance/factors-psb.html
+++ b/payroll/guidance/factors-psb.html
@@ -210,7 +210,7 @@
                You are not sure if the worker is a incorporated employee</h3>
 <hr>
 	
-<p>To determine if the worker is considered an employee, continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors.html">Determine the worker classification</a>.</p>
+<p>To determine if the worker is considered an employee, continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors.html">Determine if the worker is an employee or self-employed</a>.</p>
 <details><summary>Why do you need to determine if the worker is considered an employee</summary>
 <p>A corporation is a PSB if the incorporated employee that provides services to the person on behalf of the corporation <strong>could reasonably be considered an employee of that person if the corporation did not exist</strong>.</p>
 <p>An <strong>employee-employer relationship </strong>between the incorporated employee and the person that received the services must be shown. Both are therefore bound by a contract of employment instead of a contract of enterprise. </p>
@@ -224,7 +224,7 @@
                Indicator: The worker is not an incorporated employee</h3>
 <hr>
 <p>The worker is <strong>not</strong> an incorporated employee. This also means that the worker is <strong>not</strong> operating a personal service business (PSB).</p>
-<p>Continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors.html">Determine the worker classification</a></p>
+<p>Continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors.html">Determine if the worker is an employee or self-employed</a></p>
 </div>
 
 
