--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -635,7 +635,7 @@
 
 <div id="ajax-2fno1" class="hidden wb-frmvld gc-font-2019 ">
 <h5 class="text-info"><span class="fas fa-user text-info"> </span> Indicator: Worker is self-employed</h5>
-<p>The payer can't issues a verbal or written warning to the worker for poor performance or evaluation.</p>
+<p>The payer cannot issues a verbal or written warning to the worker for poor performance or evaluation.</p>
 </div>
 </form></div></div>
 
