--- a/payroll/guidance/contract.html
+++ b/payroll/guidance/contract.html
@@ -188,7 +188,7 @@
                 There are no offer and acceptance of the terms and conditions of the agreement from the parties</h3>
 <hr>
 <h4>Indicator: Contract is not valid</h4>    
- <p class="mrgn-tp-md">There must be an offer and an acceptance of the terms and conditions of the agreement from the parties to be considered a valid contract.  </p>
+ <p class="mrgn-tp-md">There must be an offer and an acceptance of the terms and conditions of the agreement from the parties. In a valid contract, one party makes an offer and the other party accepts the offer. </p>
 <div id="ajax-contract-not-gen">
 <p class="mrgn-tp-md">Because this factor is missing, a contract is not considered formed. A contract cannot exist without the presence of 2 or more parties. </p>
 
@@ -239,7 +239,7 @@
  <h3><small>Your result </small><br>
              Indicator: Contract is valid</h3>
 <hr>
-<p>Generally, the following applies when the contract is valid:</p>
+<p>Generally, all of the following elements apply when a contract is valid:</p>
 
 <div id="ajax-contract">
  <div class="table-responsive">
@@ -252,30 +252,37 @@
 <thead class="small">
 
 <tr>
-<th scope="col">There must be compensation or a reward for a party to carry out its obligations under the contract</th>
-<th scope="col">Consideration</th>
+<th scope="col">Description</th>
+<th scope="col">Element</th>
 </tr>
 
 </thead>
 
 <tbody>
+<tr>
+	<td>There must be an offer and an acceptance of the terms and conditions of the agreement from the parties </td>
+	<td>Offer and acceptance </td>
+</tr>
+
+<tr>
+	<td>There must be compensation or a reward for a party to carry out its obligations under the contract </td>
+	<td>Consideration </td>
+</tr>
 
 <tr>
 	<td>The parties involved must be legally capable of entering into the contract </td>
 	<td>Capacity </td>
 </tr>
 <tr>
-	<td>There must be an offer and an acceptance of the terms and conditions of the agreement from the parties </td>
-	<td>Offer and acceptance </td>
+	<td>The agreement must be mutual (for example, the parties must have the intention to enter into the contract and be bound by its terms)</td>
+	<td>Consent/intent to be legally bound </td>
 </tr>
+
 <tr>
 	<td>The object of the contract must be legitimate </td>
-	<td>Obligation/Lawful purpose </td>
+	<td>Obligation/lawful purpose </td>
 </tr>
-<tr>
-	<td>The agreement must be mutual (for example, the parties must have the intention to enter into the contract and be bound by its terms)</td>
-	<td>Consent/Intent to be legally bound </td>
-</tr> </tbody> </table>
+ </tbody> </table>
 </div></div>
 
 <details><summary>Who decides when a contract is nul and void</summary>
