--- a/payroll/guidance/contract.html
+++ b/payroll/guidance/contract.html
@@ -174,7 +174,7 @@
 		</ul>
 		</div></li>
 
-		<li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-q1-contract-no", "live": true}'>No </li>
+		<li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-q0-contract-no", "live": true}'>No </li>
 		</ul>
 	</div>
 
@@ -183,14 +183,28 @@
 
  <div id="results-contract" class="mrgn-tp-lg" aria-live="polite">
 
-  <div id="ajax-q1-contract-no" class="hidden wb-frmvld gc-font-2019 alert alert-warning">
+ <div id="ajax-q0-contract-no" class="hidden wb-frmvld gc-font-2019 alert alert-warning">
               <h3><small>Your result </small><br>
                 There are no offer and acceptance of the terms and conditions of the agreement from the parties</h3>
 <hr>
 <h4>Indicator: Contract is not valid</h4>    
  <p class="mrgn-tp-md">There must be an offer and an acceptance of the terms and conditions of the agreement from the parties. In a valid contract, one party makes an offer and the other party accepts the offer. </p>
-<div id="ajax-contract-not-gen">
+
 <p class="mrgn-tp-md">Because this factor is missing, a contract is not considered formed. A contract cannot exist without the presence of 2 or more parties. </p>
+
+<div id="ajax-contract-not-gen">
+<p class="mrgn-tp-md">The CRA requires that a valid contract is in place to determine if the worker is considered an employee or is self-employed. However, you may still want to determine the worker classification even if there is no valid contract in place.</p>
+   </div>
+            </div>
+
+
+  <div id="ajax-q1-contract-no" class="hidden wb-frmvld gc-font-2019 alert alert-warning">
+              <h3><small>Your result </small><br>
+                There is no compensation or no reward for a party to carry out its obligations under the contract</h3>
+<hr>
+<h4>Indicator: Contract is not valid</h4>    
+ <p class="mrgn-tp-md">There must be compensation or no reward for a party to carry out its obligations under the contract. In a valid contract,  after an offer is accepted, something of value is exchanged between the 2 parties. </p>
+<div id="ajax-contract-not-gen">
 
 <p class="mrgn-tp-md">The CRA requires that a valid contract is in place to determine if the worker is considered an employee or is self-employed. However, you may still want to determine the worker classification even if there is no valid contract in place.</p>
    </div>
@@ -202,7 +216,7 @@
                 The parties involved are not legally capable of entering into a contract (as per the respective provincial Employment Standards)</h3>
 <hr>
 <h4>Indicator: Contract is not valid</h4>
-<p class="mrgn-tp-md">The parties involved must be legally capable of entering into the contract to be considered a valid contract. For example, as per the respective provincial Employment Standards, one of the following applies:</p>
+<p class="mrgn-tp-md">The parties involved must be legally capable of entering into the contract. In a valid contract, both parties must have the ability or capacity to understand the terms and nature of the contract. For example, as per the respective provincial Employment Standards, one of the following applies:</p>
 	<ul class="list-unstyled cnjnctn-type-or">
 <li class="cnjnctn-col">The worker does not have the legal age to work</li>
 <li class="cnjnctn-col">The parents or legal guardians did not provide written consent for the minor child to work</li>
@@ -214,25 +228,25 @@
    
 </div>
 
-<div id="ajax-q3-contract-no" class="hidden wb-frmvld gc-font-2019 alert alert-warning">
- <h3><small>Your result </small><br>
-                The object of the contract is not legitimate</h3>
-<hr>
-<h4>Indicator: Contract is not valid</h4>
-<p class="mrgn-tp-md">The object of the contract must be legitimate to be considered a valid contract.  </p>
-
-<div data-ajax-replace="#ajax-contract-not-gen"></div>
-</div>
-
 <div id="ajax-q4-contract-no" class="hidden wb-frmvld gc-font-2019 alert alert-warning">
  <h3><small>Your result </small><br>
                The agreement is not mutual</h3>
 <hr>
 <h4>Indicator: Contract is not valid</h4>
-<p class="mrgn-tp-md">The agreement must be mutual to be considered a valid contract. Generally, this means the parties must have the intention to enter into the contract and be bound by its terms.  </p>
+<p class="mrgn-tp-md">The agreement must be mutual. In a valid contract, each party must freely consent to the terms of the contract. There can be no undue influence or pressure to force a party to make or accept an offer.  </p>
 
 <div data-ajax-replace="#ajax-contract-not-gen"></div>
      
+</div>
+
+<div id="ajax-q3-contract-no" class="hidden wb-frmvld gc-font-2019 alert alert-warning">
+ <h3><small>Your result </small><br>
+                The object of the contract is not legitimate</h3>
+<hr>
+<h4>Indicator: Contract is not valid</h4>
+<p class="mrgn-tp-md">The object of the contract must be legitimate. In a valid contract, a contract must be lawful in inent and cannot be made to execute illegal business activities. </p>
+
+<div data-ajax-replace="#ajax-contract-not-gen"></div>
 </div>
 
 <div id="ajax-q4-contract-yes" class="hidden wb-frmvld gc-font-2019 alert alert-success">
