--- a/payroll/guidance/contract.html
+++ b/payroll/guidance/contract.html
@@ -204,10 +204,7 @@
 <hr>
 <h4>Indicator: Contract is not valid</h4>    
  <p class="mrgn-tp-md">There must be compensation or no reward for a party to carry out its obligations under the contract. In a valid contract,  after an offer is accepted, something of value is exchanged between the 2 parties. </p>
-<div id="ajax-contract-not-gen">
-
-<p class="mrgn-tp-md">The CRA requires that a valid contract is in place to determine if the worker is considered an employee or is self-employed. However, you may still want to determine the worker classification even if there is no valid contract in place.</p>
-   </div>
+<div data-ajax-replace="#ajax-contract-not-gen"></div>
             </div>
 
 
