--- a/payroll/guidance/overview.html
+++ b/payroll/guidance/overview.html
@@ -113,8 +113,8 @@
 
  <ul class="fa-ul">
 <li><span class="fas fa-check fa-li fa-lg text-success"> </span> Employee </li>
-<li><span class="fas fa-check fa-li fa-lg text-success"> </span> Self-employed and contractor, including a personal services business </li>
-<li><span class="fas fa-check fa-li fa-lg text-success"> </span> Incorporated employee </li>
+<li><span class="fas fa-check fa-li fa-lg text-success"> </span> Self-employed and contractor </li>
+<li><span class="fas fa-check fa-li fa-lg text-success"> </span> Incorporated employee (operating a personal service business)</li>
 </ul>
 
 <h2 id="h_2">Different employment status for tax purposes</h2>
