--- a/payroll/guidance/factors.html
+++ b/payroll/guidance/factors.html
@@ -117,8 +117,8 @@
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col">
 <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-check fa-li text-success"></span> In a province not in Quebec or in a territory </li>
-<li><span class="fas fa-check fa-li text-success"></span> Outside Canada and the employment is performed in a province not in Quebec, in a territory, or in another country</li>
+<li><span class="fas fa-check fa-li text-success"></span> In a province or a territory other than Quebec  </li>
+<li><span class="fas fa-check fa-li text-success"></span> Outside Canada and the employment is performed in a province or territory other than Quebec</li>
 </ul>
 <p>Continue to: <a href="/cra-arc/payroll/guidance/factors-federal.html">Contract formed in a province or territory not in Quebec</a></p>
 </li>
