--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -108,8 +108,8 @@
 
  <p>Use this guidance if the contract was formed (unless the contract states differently):</p>
 <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-check fa-li text-success"></span> In a province not in Quebec or in a territory </li>
-<li><span class="fas fa-check fa-li text-success"></span> Outside Canada and the employment is performed in a province not in Quebec, in a territory, or in another country</li>
+<li><span class="fas fa-check fa-li text-success"></span> In a province or a territory other than Quebec  </li>
+<li><span class="fas fa-check fa-li text-success"></span> Outside Canada and the employment is performed in a province or territory other than Quebec</li>
 </ul>
 
 <p>Learn more: <a href="contract.html">Determine if a contract is valid</a></p>
