--- a/payroll/guidance/contract.html
+++ b/payroll/guidance/contract.html
@@ -124,6 +124,7 @@
 <p id="tab1">Content has been developed to provide guidance only. The guidance does not replace the law and does not replace a formal request for a ruling. <strong>No changes were made to the existing federal legislative requirement. </strong></p>
 </div>
 <p>Contracts can be formed either orally or in writing. An oral contract is as valid and enforceable as a written contract.</p>
+<p>The CRA may request a copy of the contract or testimony by the parties to review the parties's actions. This review is to identify the intentions of both parties in the context of the employment.</p>
 
 <p class="text-muted small">Make a selection and <strong> scroll down</strong> for further questions or results</p>
   <div id="interactive">
