--- a/payroll/guidance/index.html
+++ b/payroll/guidance/index.html
@@ -73,10 +73,7 @@
 
 <dl>
   <dt>   <a href="overview.html">Overview</a>  </dt>
-  <dd>Information on what the employment status helps determine and the different type of employment status </dd>
-
-<dt>    <a href="contract.html">Determine if a contract is valid</a>  </dt>
-  <dd>Information on what is considered a valid contract, who decides when a contract is null and void and what are examples of contracts that are terminated  </dd>
+  <dd>Information on the type of employment status for tax purposes, what is considered a valid contract, including what to do if you are not sure about the worker classification </dd>
 
   <dt>    <a href="factors.html">Determine if the worker is an employee or self-employed</a>  </dt>
   <dd>Information on the factors to consider depending on where the contract was formed. The factors are different if the contract is formed in the province of Quebec or in any other province or territory (unless the contract states differently).  </dd>
