--- a/payroll/guidance/overview.html
+++ b/payroll/guidance/overview.html
@@ -104,8 +104,10 @@
 <ul>
 <li><a href="#h_1">Types of employment status</a></li>
 <li><a href="#h_2">Different employment status for tax purposes</a></li>
-<li><a href="#h_3">What if you made an error in the employment status</a></li>
-<li><a href="#h_4">What if you are not sure if the worker is an employee or self-employed </a></li>
+<li><a href="#h_3">Determine if a contract is valid</a></li>
+<li><a href="#h_4">What if you made an error in the employment status</a></li>
+<li><a href="#h_5">What if you are not sure if the worker is an employee or self-employed </a></li>
+<li><a href="#h_6">References </a></li>
 </ul>
 
 <h2 id="h_1">Types of employment status</h2>
@@ -147,10 +149,84 @@
 </ul>
 </details>
 
-<h2 id="h_3">What if you made an error in the employment status</h2>
+<h2 id="h_3">Determine if a contract is valid</h2>
+
+<p>Generally, all of the following elements apply when a contract is valid:</p>
+
+<div id="ajax-contract">
+ <div class="table-responsive">
+      <table class="table table-striped small table-condensed">
+        <caption class="wb-inv">
+       Examples of a valid contract
+        </caption>
+
+
+<thead class="small">
+
+<tr>
+<th scope="col">Description</th>
+<th scope="col">Element</th>
+</tr>
+
+</thead>
+
+<tbody>
+<tr>
+	<td>There must be an offer and an acceptance of the terms and conditions of the agreement from the parties </td>
+	<td>Offer and acceptance </td>
+</tr>
+
+<tr>
+	<td>There must be compensation or a reward for a party to carry out its obligations under the contract </td>
+	<td>Consideration </td>
+</tr>
+
+<tr>
+	<td>The parties involved must be legally capable of entering into the contract </td>
+	<td>Capacity </td>
+</tr>
+<tr>
+	<td>The agreement must be mutual (for example, the parties must have the intention to enter into the contract and be bound by its terms)</td>
+	<td>Consent/intent to be legally bound </td>
+</tr>
+
+<tr>
+	<td>The object of the contract must be legitimate </td>
+	<td>Obligation/lawful purpose </td>
+</tr>
+ </tbody> </table>
+</div>
+
+<details><summary>Who decides when a contract is nul and void</summary>
+<div id="ajax-contract-null">
+<p>When addressing the issue of statutory illegality, the courts can decide that a contract is null and void from the beginning (void ab initio) if the formation of the contract was prohibited by statute and if, in the court's assessment, it would not be contrary to public policy to declare the contract void ab initio.</p>
+</div>
+</details>
+<details><summary>Examples of termination of a contract</summary>
+<div id="ajax-contract-stop">
+<p>Examples of when a contract is terminated:</p>
+
+<ul>
+<li>The death of one of the parties</li>
+<li>The expiry of the time stipulated for the duration of the contract by the parties or by law (in the absence of any by the parties) </li>
+<li>Confusion arising as a result of both parties to the contract becoming one in the same (for example, an individual buys a business (sole proprietorship) that they have an existing contract with and becomes both parties to the same contract) </li>
+<li>Misrepresentation </li>
+<li>Fraud </li>
+<li>Duress </li>
+<li>The effect of a resolutory clause in the contract (this would be a clause in the contract that serves to release the parties to the contract from an obligation in the event of a stipulated occurrence or series of events)</li>
+<li>The disrespect of the main clauses of the contract, or significant breach of the conditions outlined in the contract </li>
+<li>A judgment from a competent court</li>
+<li>When the performance required by the contract becomes impossible for one or more of the parties to the contract to honour (reasons such as a change in law making it illegal for one of the parties to meet their obligations, or the physical incapacity (injury or mental illness) of one or more of the parties can cause a contract to become impossible to honour)</li>
+<li>When both the obligations and the consideration set out in the contract have been satisfied (once a contract is completed, it is at its cessation) </li>
+</ul>
+</div>
+</details>
+</div>
+
+<h2 id="h_4">What if you made an error in the employment status</h2>
 <p>Individuals and employers may have to pay unpaid tax and penalties, or lose entitlement to benefits, if their employment status is wrong.</p>
 
-<h2 id="h_4">What if you are not sure if the worker is an employee or self-employed </h2>
+<h2 id="h_5">What if you are not sure if the worker is an employee or self-employed </h2>
 <p>You can check the individual’s employment status to see if the worker is classified as an employee or self-employed. Continue to: <a href="/cra-arc/payroll/guidance/factors.html">Guidance on the worker classification</a></p>
 
  <div class="row">
@@ -165,6 +241,38 @@
 	
 	</div></div>
 
+
+<h2 id="h_6">References</h2>
+
+<h3 id="h_4_2">Court cases</h3>
+<div class="row">
+<div class="col-xs-12">
+<dl class="dl-horizontal">
+<dt><a href="https://decisions.scc-csc.ca/scc-csc/scc-csc/en/item/2118/index.do?q=Transport+Nordt+American+Express+Inc">29355</a>  </dt> <dd>Supreme Court - Transport Nordt American Express Inc. v. New Solutions Financial Corp., 2004 SCC 7 </dd>
+<dt><a href="https://reports.fja-cmf.gc.ca/fja-cmf/j/en/item/332348/index.do">A-881-96</a> </dt> 
+<dd>Federal Court of Appeal - Still v. Canada (M.N.R.) [1998] 1 F.C. 549 </dd>
+<dt><a href="https://decisions.fca-caf.gc.ca/fca-caf/decisions/en/item/34429/index.do?q=ozdemir">A-31-97</a>  </dt> 
+<dd>Federal Court of Appeal - Canada (Attorney General) v. Polat [1997] F.C.J. No. 1675 </dd>
+<dt><a href="https://decisions.fca-caf.gc.ca/tcc-cci/decisions/en/item/28999/index.do?q=coicou">2008 TCC 628</a>  </dt> 
+<dd>Tax Court of Canada - Coicou v. Canada (M.N.R.) 2008 TCC 628 </dd>
+<dt><a href="https://decisions.fca-caf.gc.ca/tcc-cci/decisions/en/item/26083/index.do?q=garland+3282">2005 TCC 176</a>  </dt> 
+<dd>Tax Court of Canada - Garland v. Canada (M.N.R.) 2005 TCC 176 </dd>
+<dt><a href="https://decisions.fca-caf.gc.ca/tcc-cci/decisions/en/item/24234/index.do?q=bruno+bouillon">2000-5076-EI</a> </dt> <dd>Tax Court of Canada - Pollet v. M.N.R.</dd>
+<dt><a href="https://decisions.fca-caf.gc.ca/tcc-cci/decisions/en/item/24830/index.do?q=mia+1040">98-1040-UI</a>  </dt> 
+<dd>Tax Court of Canada - Mia v. Canada (M.N.R.) [2001] T.C.J. No. 199  </dd>
+<dt><a href="https://decisions.fca-caf.gc.ca/tcc-cci/decisions/en/item/23837/index.do?q=amer+1794">97-1794-UI</a>  </dt> 
+<dd>Tax Court of Canada - Amer v. Canada (M.N.R.) [1999] T.C.J. No. 213  </dd>
+<dt><a href="https://decisions.fca-caf.gc.ca/tcc-cci/decisions/en/item/23458/index.do?q=luzolo">97-2000-UI</a>   </dt> 
+<dd>Tax Court of Canada - Luzolo v. Canada (M.N.R.) [1999] T.C.J. No. 822  </dd>
+<dt><a href="https://decisions.fca-caf.gc.ca/tcc-cci/decisions/en/item/23034/index.do?q=haule">98-511-UI</a>  </dt> 
+<dd>Tax Court of Canada - Haule v. Canada (M.N.R.) [1998] T.C.J. No. 1079  </dd>
+<dt><a href="https://decisions.fca-caf.gc.ca/tcc-cci/decisions/en/item/23589/index.do?q=bruno+bouillon">97-254-UI, 97-255-UI, 97-256-UI</a> </dt> <dd>Tax Court of Canada - Johnston v. M.N.R.</dd>
+<dt><a href="https://decisions.fca-caf.gc.ca/tcc-cci/decisions/en/item/24113/index.do?q=bruno+bouillon">96-1942-UI</a> </dt> <dd>Tax Court of Canada - Jones v. M.N.R.</dd>
+<dt><a href="https://www.canlii.org/en/bc/bcca/doc/1955/1955canlii308/1955canlii308.html?searchUrlHash=AAAAAQAPSGFyZG1hbiB2LiBGYWxrAAAAAAE&amp;resultIndex=1">DLR 129</a> </dt> 
+<dd>British Columbia Court of Appeal - Hardman v. Falk, [1955] 3 D.L.R. 129  </dd>
+</dl>
+	
+</div>
 </div>
 
 <nav class="mrgn-bttm-lg mrgn-tp-lg">
