--- a/payroll/guidance/overview.html
+++ b/payroll/guidance/overview.html
@@ -72,9 +72,6 @@
  <li>	 <a href="overview.html" class="active" aria-current="page">Overview</a>	</li>
      
 
-<li><a href="contract.html" class="hidden-xs hidden-sm">Determine if a contract is valid </a>
-      <a href="contract.html#gc-document-nav" class="visible-xs visible-sm">Determine if a contract is valid</a></li>
-
 <li><a href="factors.html" class="hidden-xs hidden-sm">Determine if the worker is an employee or self-employed</a>
       <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">Determine if the worker is an employee or self-employed</a></li>
 
@@ -102,15 +99,14 @@
 <h2 class="h3">On this page</h2>
   	
 <ul>
-<li><a href="#h_1">Types of employment status</a></li>
-<li><a href="#h_2">Different employment status for tax purposes</a></li>
+<li><a href="#h_2">Types of employment status for tax purposes</a></li>
 <li><a href="#h_3">Determine if a contract is valid</a></li>
 <li><a href="#h_4">What if you made an error in the employment status</a></li>
 <li><a href="#h_5">What if you are not sure if the worker is an employee or self-employed </a></li>
 <li><a href="#h_6">References </a></li>
 </ul>
 
-<h2 id="h_1">Types of employment status</h2>
+<h2 id="h_2">Types of employment status for tax purposes</h2>
 <p>The main types of employment status are:</p>
 
  <ul class="fa-ul">
@@ -119,7 +115,6 @@
 <li><span class="fas fa-check fa-li fa-lg text-success"> </span> Incorporated employee (operating a personal service business)</li>
 </ul>
 
-<h2 id="h_2">Different employment status for tax purposes</h2>
 <p>An individual may be an employee in employment law but have a different status under the tax law. As an employer or a payer, you must work out each worker’s status in both employment law and tax law.</p>
 
 <details><summary>Tax law</summary>
