--- a/payroll/guidance/overview.html
+++ b/payroll/guidance/overview.html
@@ -146,9 +146,16 @@
 
 <h2 id="h_3">Determine if a contract is valid</h2>
 
+<div id="ajax-contract">
+
+<p>The CRA requires that a valid contract is in place to determine if the worker is considered an employee or is self-employed. However, you may still want to determine the worker classification even if there is no valid contract in place.</p>
+
+<p>Contracts can be formed either orally or in writing. An oral contract is as valid and enforceable as a written contract.</p>
+
+<p>The CRA may request a copy of the contract or testimony by the parties to review the parties's actions. This review is to identify the intentions of both parties in the context of the employment.</p>
+
 <p>Generally, all of the following elements apply when a contract is valid:</p>
 
-<div id="ajax-contract">
  <div class="table-responsive">
       <table class="table table-striped small table-condensed">
         <caption class="wb-inv">
@@ -167,39 +174,49 @@
 
 <tbody>
 <tr>
-	<td>There must be an offer and an acceptance of the terms and conditions of the agreement from the parties </td>
+	<td>There must be an offer and an acceptance of the terms and conditions of the agreement from the parties.  In a valid contract, one party makes an offer and the other party accepts the offer. </td>
 	<td>Offer and acceptance </td>
 </tr>
 
 <tr>
-	<td>There must be compensation or a reward for a party to carry out its obligations under the contract </td>
+	<td>There must be compensation or a reward for a party to carry out its obligations under the contract. After an offer is accepted, something of value is exchanged between the two parties. </td>
 	<td>Consideration </td>
 </tr>
 
 <tr>
-	<td>The parties involved must be legally capable of entering into the contract </td>
+	<td><p>The parties involved must be legally capable of entering into the contract. Both parties must have the ability or capacity to understand the terms and nature of the contract. For example, as per the respective provincial Employment Standards, one of the following applies:</p>
+<ul class="list-unstyled cnjnctn-type-or">
+<li class="cnjnctn-col">The worker has the legal age to work </li>
+<li class="cnjnctn-col">The parents or legal guardians provides written consent for the minor child to work</li>
+<li class="cnjnctn-col">Both parties does have a mental disability that prevents them from understanding the nature of the contract</li>
+</ul>
+
+ </td>
 	<td>Capacity </td>
 </tr>
 <tr>
-	<td>The agreement must be mutual (for example, the parties must have the intention to enter into the contract and be bound by its terms)</td>
+	<td>The agreement must be mutual. Each party must freely consent to the terms of the contract. There can be no undue influence or pressure to force a party to make or accept an offer.</td>
 	<td>Consent/intent to be legally bound </td>
 </tr>
 
 <tr>
-	<td>The object of the contract must be legitimate </td>
+	<td>The object of the contract must be legitimate.  A contract must be lawful in inent and cannot be made to execute illegal business activities.</td>
 	<td>Obligation/lawful purpose </td>
 </tr>
  </tbody> </table>
 </div>
+
+<p><strong>If you are not sure of which jurisdiction sets the rules for your industry</strong>, go to: <a href="https://www.canada.ca/en/services/jobs/workplace/federally-regulated-industries.html"> List of federally regulated industries and workplaces</a></p>
 
 <details><summary>Who decides when a contract is nul and void</summary>
 <div id="ajax-contract-null">
 <p>When addressing the issue of statutory illegality, the courts can decide that a contract is null and void from the beginning (void ab initio) if the formation of the contract was prohibited by statute and if, in the court's assessment, it would not be contrary to public policy to declare the contract void ab initio.</p>
 </div>
 </details>
+
 <details><summary>Examples of termination of a contract</summary>
 <div id="ajax-contract-stop">
-<p>Examples of when a contract is terminated:</p>
+<p>The following are examples of when a contract is terminated:</p>
 
 <ul>
 <li>The death of one of the parties</li>
