--- a/payroll/guidance/overview.html
+++ b/payroll/guidance/overview.html
@@ -185,10 +185,10 @@
 
 <tr>
 	<td><p>The parties involved must be legally capable of entering into the contract. Both parties must have the ability or capacity to understand the terms and nature of the contract. For example, as per the respective provincial Employment Standards, one of the following applies:</p>
-<ul class="list-unstyled cnjnctn-type-or">
-<li class="cnjnctn-col">The worker has the legal age to work </li>
-<li class="cnjnctn-col">The parents or legal guardians provides written consent for the minor child to work</li>
-<li class="cnjnctn-col">Both parties does have a mental disability that prevents them from understanding the nature of the contract</li>
+ <ul class="fa-ul">
+<li><span class="fas fa-check fa-li fa-lg text-success"> </span> The worker has the legal age to work </li>
+<li><span class="fas fa-check fa-li fa-lg text-success"> </span> The parents or legal guardians provides written consent for the minor child to work</li>
+<li><span class="fas fa-check fa-li fa-lg text-success"> </span> Both parties does have a mental disability that prevents them from understanding the nature of the contract</li>
 </ul>
 
  </td>
