--- a/payroll/guidance/overview.html
+++ b/payroll/guidance/overview.html
@@ -174,12 +174,14 @@
 
 <tbody>
 <tr>
-	<td>There must be an offer and an acceptance of the terms and conditions of the agreement from the parties.  In a valid contract, one party makes an offer and the other party accepts the offer. </td>
+	<td><p>There must be an offer and an acceptance of the terms and conditions of the agreement from the parties.  </p>
+<p>In a valid contract, one party makes an offer and the other party accepts the offer. </p></td>
 	<td>Offer and acceptance </td>
 </tr>
 
 <tr>
-	<td>There must be compensation or a reward for a party to carry out its obligations under the contract. After an offer is accepted, something of value is exchanged between the two parties. </td>
+	<td><p>There must be compensation or a reward for a party to carry out its obligations under the contract. </p>
+<p>After an offer is accepted, something of value is exchanged between the two parties.</p> </td>
 	<td>Consideration </td>
 </tr>
 
@@ -195,12 +197,14 @@
 	<td>Capacity </td>
 </tr>
 <tr>
-	<td>The agreement must be mutual. Each party must freely consent to the terms of the contract. There can be no undue influence or pressure to force a party to make or accept an offer.</td>
+	<td><p>The agreement must be mutual. </p>
+<p>Each party must freely consent to the terms of the contract. There can be no undue influence or pressure to force a party to make or accept an offer.</p></td>
 	<td>Consent/intent to be legally bound </td>
 </tr>
 
 <tr>
-	<td>The object of the contract must be legitimate.  A contract must be lawful in inent and cannot be made to execute illegal business activities.</td>
+	<td><p>The object of the contract must be legitimate. </p>
+<p> A contract must be lawful in inent and cannot be made to execute illegal business activities.</p></td>
 	<td>Obligation/lawful purpose </td>
 </tr>
  </tbody> </table>
@@ -239,7 +243,7 @@
 <p>Individuals and employers may have to pay unpaid tax and penalties, or lose entitlement to benefits, if their employment status is wrong.</p>
 
 <h2 id="h_5">What if you are not sure if the worker is an employee or self-employed </h2>
-<p>You can check the individual’s employment status to see if the worker is classified as an employee or self-employed. Continue to: <a href="/cra-arc/payroll/guidance/factors.html">Guidance on the worker classification</a></p>
+<p>You need to consider multiple factors to determine if the worker is an employee or is self-employed. You can use the CRA guidance to help you gather the facts based on your sitution. </p>
 
  <div class="row">
 	 <div class="col-xs-3 col-sm-2">
@@ -248,11 +252,17 @@
 	    <span class="fas fa-comments fa-stack-1x"></span>
 	  </span>
 	  </div> <div class="col-xs-9 col-sm-10">
-	<p>If you are still not sure if the worker is an employee or self-employed, you can ask for a CPP/EI ruling.  </p>
+	<p>If you are still not sure if the worker is an employee or self-employed after following the CRA guidance, you can ask for a CPP/EI ruling.  </p>
 	<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/canada-pension-plan-cpp-employment-insurance-ei-rulings/cpp-ei-explained/canada-pension-plan-employment-insurance-explained-11.html">How to get a CPP/EI ruling</a></p>
 	
 	</div></div>
 
+<nav class="mrgn-bttm-lg mrgn-tp-lg">
+  <h3 class="wb-inv">Document navigation</h3>
+  <ul class="pager">
+    <li class="next"><a href="factors.html" rel="next"><span class="wb-inv">Next: </span>Determine if the worker is an employee or self-employed</a></li>
+  </ul>
+</nav>
 
 <h2 id="h_6">References</h2>
 
@@ -287,12 +297,6 @@
 </div>
 </div>
 
-<nav class="mrgn-bttm-lg mrgn-tp-lg">
-  <h3 class="wb-inv">Document navigation</h3>
-  <ul class="pager">
-    <li class="next"><a href="contract.html" rel="next"><span class="wb-inv">Next: </span>Determine if a contract is valid</a></li>
-  </ul>
-</nav>
 
 <section id="psb" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is considered a personal services business (PSB)</h2>
 	</header>	<div class="modal-body">		
