--- a/payroll/guidance/index.html
+++ b/payroll/guidance/index.html
@@ -65,7 +65,7 @@
             
 <div class="col-md-8">
 <div id="ajax-classification">
-<p>It is important to determine if a worker is an <strong>employee</strong>, an <strong>incorporated employee</strong> or is <strong>self-employed</strong>. Employment status directly impacts on how a worker is treated under specific legislation such as the <a href="http://laws-lois.justice.gc.ca/eng/acts/C-8/index.html">Canada Pension Plan</a>, <a href="http://laws-lois.justice.gc.ca/eng/acts/E-5.6/index.html">Employment Insurance Act</a> and the <a href="http://laws-lois.justice.gc.ca/eng/acts/I-3.3/index.html">Income Tax Act</a>.</p>
+<p>It is important to determine if a worker is an <strong>employee</strong>, an <strong>incorporated employee</strong> or is <strong>self-employed</strong>. Employment status has direct impacts on how a worker is treated under specific legislation such as the <a href="http://laws-lois.justice.gc.ca/eng/acts/C-8/index.html">Canada Pension Plan</a>, <a href="http://laws-lois.justice.gc.ca/eng/acts/E-5.6/index.html">Employment Insurance Act</a> and the <a href="http://laws-lois.justice.gc.ca/eng/acts/I-3.3/index.html">Income Tax Act</a>.</p>
 </div>
  	
 <nav class="provisional gc-subway">
