--- a/payroll/guidance/factors-psb.html
+++ b/payroll/guidance/factors-psb.html
@@ -87,7 +87,7 @@
 
 
 <h1 property="name" id="wb-cont" class="gc-thickline">Determine if the worker is an incorporated employee</h1>
- <div id="ajax-classification">
+
 <div class="alert alert-info">
 <p>Content has been updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong>.</p>
 </div>
@@ -99,7 +99,7 @@
 	<li class="cnjnctn-col"><a href="#tab1">Interactive questions</a> to get specific results, factors and indicators </li>
 	<li class="cnjnctn-col">Read the full text, continue to: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-income-tax-return/tax-implications-personal-services-business.html">Tax implications for a personal services business</a></li>
 	</ul>
-			 
+ <div id="ajax-psb-classification">			 
 <h2>Answer a few questions for guidance on how to determine if the worker is an incorporated employee </h2>	
    
 <div class="alert alert-warning">
