--- a/payroll/guidance/factors.html
+++ b/payroll/guidance/factors.html
@@ -129,16 +129,17 @@
 </ul>
 
 
-<section id="psb" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is considered a personal services business (PSB)</h2>
+<section id="psb" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">	<header class="modal-header"><h2 class="modal-title">What is considered a personal services business (PSB)</h2>
 	</header>	<div class="modal-body">		
-	<div data-ajax-replace="/cra-arc/payroll/guidance/overview.html#ajax-psb"></div>
+	<div data-ajax-replace="/cra-arc/payroll/guidance/factors-psb.html#ajax-psb-classification"></div>
 	</div></section>
 
 
-<section id="contract" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Validity of the contract</h2>
+<section id="contract" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Validity of the contract</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="/cra-arc/payroll/guidance/overview.html#ajax-contract"></div>
 	</div></section>
+
 	 
 
 
