--- a/payroll/guidance/overview.html
+++ b/payroll/guidance/overview.html
@@ -146,7 +146,7 @@
 
 <h2 id="h_3">Determine if a contract is valid</h2>
 
-<div id="ajax-contract">
+<div id="contract">
 
 <p>The CRA requires that a valid contract is in place to determine if the worker is considered an employee or is self-employed. However, you may still want to determine the worker classification even if there is no valid contract in place.</p>
 
