--- a/payroll/guidance/factors.html
+++ b/payroll/guidance/factors.html
@@ -108,7 +108,7 @@
 
 <p>You need to consider multiple factors to determine if the worker is an employee or is self-employed.  </p>
 
- <p>Unless the <a href="#contract" aria-controls="contract" class="overlay-lnk" role="button">valid contract  <span class="far fa-question-circle"></span></a> states differently, the factors are different if the contract is formed:</p>
+ <p>Unless the <a href="#ajax-contract" aria-controls="ajax-contract" class="overlay-lnk" role="button">valid contract  <span class="far fa-question-circle"></span></a> states differently, the factors are different if the contract is formed:</p>
 
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col">
@@ -129,15 +129,15 @@
 </ul>
 
 
-<section id="psb" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">	<header class="modal-header"><h2 class="modal-title">What is considered a personal services business (PSB)</h2>
+<section id="ajax-psb" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">	<header class="modal-header"><h2 class="modal-title">What is considered a personal services business (PSB)</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="/cra-arc/payroll/guidance/factors-psb.html#ajax-psb-classification"></div>
 	</div></section>
 
 
-<section id="contract" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Validity of the contract</h2>
+<section id="ajax-contract" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Validity of the contract</h2>
 	</header>	<div class="modal-body">		
-	<div data-ajax-replace="/cra-arc/payroll/guidance/overview.html#ajax-contract"></div>
+	<div data-ajax-replace="/cra-arc/payroll/guidance/overview.html#contract"></div>
 	</div></section>
 
 	 
