--- a/payroll/guidance/overview.html
+++ b/payroll/guidance/overview.html
@@ -142,6 +142,8 @@
 <li><a href="https://www.saskatchewan.ca/business/employment-standards">Saskatchewan</a> </li>
 <li><a href="http://www.community.gov.yk.ca/es.html">Yukon</a> </li>
 </ul>
+
+<p><strong>Learn more if you are not sure of which jurisdiction sets the rules for your industry</strong>: <a href="https://www.canada.ca/en/services/jobs/workplace/federally-regulated-industries.html"> List of federally regulated industries and workplaces</a></p>
 </details>
 
 <h2 id="h_3">Determine if a contract is valid</h2>
@@ -209,8 +211,6 @@
 </tr>
  </tbody> </table>
 </div>
-
-<p><strong>If you are not sure of which jurisdiction sets the rules for your industry</strong>, go to: <a href="https://www.canada.ca/en/services/jobs/workplace/federally-regulated-industries.html"> List of federally regulated industries and workplaces</a></p>
 
 <details><summary>Who decides when a contract is nul and void</summary>
 <div id="ajax-contract-null">
