--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -1717,15 +1717,20 @@
 </details>
 <div id="ajax-facts">
 <h2>Make your final analysis based on the 7 factors</h2>
-<details><summary> <h2 class="h3 text-info" id="analyze"> <span class="fas fa-eye text-info"> </span>&nbsp;&nbsp; Analyze the facts</h2></summary> 
+<h3 class="h3 text-info" id="analyze"> <span class="fas fa-eye text-info"> </span>&nbsp;&nbsp; Analyze the facts</h3> 
 <p>You need to analyze the facts by organizing and assessing the information you gathered. This process will move the worker into one side of the continuum, and confirm if there is an employment relationship, or if the worker is in business on his own account.</p>
 <p>You must analyze the answer to each question from both the payer <strong>and </strong>the worker to help you decide if the evidence moves the worker to the employee or self-employed side of the continuum.</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><span class="fas fa-people-arrows text-info fa-lg"> </span> Worker is an employee</li>
-<li class="cnjnctn-col"><span class="fas fa-user text-info fa-lg"> </span> Worker is self-employed</li>
-</ul>
- </details>
+<li class="cnjnctn-col"><p><span class="fas fa-people-arrows text-info fa-lg"> </span> Worker is an employee</p>
+<p class="mrgn-tp-md">You may need to consider additional factors to determine if the worker is an <strong>incorporated employee</strong>. If the worker is an incorporated employee, special rules may apply to their corporation for income tax purposes if an individual performs the services on behalf of their own corporation. This may be considered a personal services business (PSB). </p>
+<p>Continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors-psb.html">Determine if the worker is an incorporated employee</a>. </p>
 
+</li>
+<li class="cnjnctn-col"><p><span class="fas fa-user text-info fa-lg"> </span> Worker is self-employed</p>
+<p>If the worker is self-employed, continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/after.html">Understand the income tax, payroll and GST/HST tax obligations</a></p>
+</li>
+</ul>
+ 
 <details><summary> <h2 class="h3 text-info" id="weight"> <span class="fas fa-balance-scale text-info"> </span>&nbsp;&nbsp; Weighing the facts</h2></summary> 
 <p>This is the most important part of analyzing the information. When reviewing the factors, there may be some facts that support an employee-employer relationship and other facts indicate self-employement.</p>
 <p>To help you resolve this issue, you must determine the true essence of the working relationship of the parties. You must review the indicators in the factors of control, ownership of tools and equipment, opportunity for profit and financial risk, and responsibility for investment and management. As you respond to each question you should be able to decide what weight to assign each category based on a thorough review of all the responses. For example, control may favour an employee relationship, but ownership of tools may be assigned <strong>more weight </strong>due to how the total relationship is structured. This may be an indicator because of the increased weight given to this factor, the worker is moved into the independent contractor side of the continuum.</p>
@@ -1734,12 +1739,6 @@
 <p>Whether a worker is an employee or self-employed needs to be analyzed on a case-by-case basis. Each case is unique and requires a thorough review of the facts. It is also important to remember that when attempting to move a worker to one side of the continuum or the other, you must examine the <strong>total working relationship</strong>. There is no one factor that is determinative, and there is a non-exhaustive list of factors to consider.</p>
 </details>
 
-<details><summary><h2 class="h3 text-info" id="case2"> <span class="fas fa-address-card text-info"> </span>&nbsp;&nbsp; Employee performing services through their own corporation</h2></summary> 
-<p class="mrgn-tp-md">You need to consider multiple factors to determine if the worker is an incorporated employee. If the worker is an incorporated employee, special rules may apply to their corporation for income tax purposes if an individual performs the services on behalf of their own corporation. This may be considered a personal services business (PSB). </p>
-
-<p>Learn more: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors-psb.html">Determine if the worker is an incorporated employee</a>. </p>
-
-</details>
   </div>    
 	 
 	 
